force-app/main/default/objects/LIFO_Processing_Record__c/LIFO_Processing_Record__c.object-meta.xml
<CustomObject>
    <description>Record created to convey RS Cost transaction data used to update the appropriate LIFO Cost transaction records.</description>
    <label>LIFO Processing Record</label>
    <nameField>
        <displayFormat>LPN-{000000000}</displayFormat>
        <label>LIFO Processing Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LIFO Processing Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>