force-app/main/default/objects/LIFO_Processing_Record__c/fields/Division_Master__c.field-meta.xml
<CustomField>
    <fullName>Division_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Division Master</label>
    <referenceTo>rstk__sydiv__c</referenceTo>
    <relationshipLabel>LIFO Processing Records</relationshipLabel>
    <relationshipName>LIFO_Processing_Records</relationshipName>
    <type>Lookup</type>
</CustomField>