force-app/main/default/objects/LIFO_Processing_Record__c/fields/FIFO_Layer_Reference__c.field-meta.xml
<CustomField>
    <fullName>FIFO_Layer_Reference__c</fullName>
    <label>FIFO Layer Reference</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>