force-app/main/default/objects/LIFO_Processing_Record__c/fields/Inventory_Item_Master__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Item_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory Item Master</label>
    <referenceTo>rstk__icitem__c</referenceTo>
    <relationshipLabel>LIFO Processing Records</relationshipLabel>
    <relationshipName>LIFO_Processing_Records</relationshipName>
    <type>Lookup</type>
</CustomField>