force-app/main/default/objects/LIFO_Processing_Record__c/fields/RCPT_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>RCPT_NUMBER__c</fullName>
    <label>RCPT NUMBER</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>