force-app/main/default/objects/LIFO_Processing_Record__c/fields/Ready_to_Process__c.field-meta.xml
<CustomField>
    <fullName>Ready_to_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready to Process</label>
    <type>Checkbox</type>
</CustomField>