force-app/main/default/objects/LIFO_Processing_Record__c/fields/Record_Processed__c.field-meta.xml
<CustomField>
    <fullName>Record_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Record Processed</label>
    <type>Checkbox</type>
</CustomField>