force-app/main/default/objects/LIFO_Processing_Record__c/fields/Rootstock_Cost_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Rootstock_Cost_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rootstock Cost Transaction</label>
    <referenceTo>rstk__sytxncst__c</referenceTo>
    <relationshipLabel>LIFO Processing Records</relationshipLabel>
    <relationshipName>LIFO_Processing_Records</relationshipName>
    <type>Lookup</type>
</CustomField>