force-app/main/default/objects/LIFO_Processing_Record__c/fields/TOTAL_COST__c.field-meta.xml
<CustomField>
    <fullName>TOTAL_COST__c</fullName>
    <description>Total cost from the Rootstock Inventory COst Transaction</description>
    <label>TOTAL COST</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>