force-app/main/default/objects/LIFO_Processing_Record__c/fields/TXN_QTY__c.field-meta.xml
<CustomField>
    <fullName>TXN_QTY__c</fullName>
    <label>TXN QTY</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>