force-app/main/default/objects/LIFO_Processing_Record__c/fields/TXN_SUB_TYPE__c.field-meta.xml
<CustomField>
    <fullName>TXN_SUB_TYPE__c</fullName>
    <label>TXN SUB TYPE</label>
    <length>15</length>
    <type>Text</type>
</CustomField>