force-app/main/default/objects/LIFO_Processing_Record__c/fields/TXN_TYPE__c.field-meta.xml
<CustomField>
    <fullName>TXN_TYPE__c</fullName>
    <label>TXN TYPE</label>
    <length>30</length>
    <type>Text</type>
</CustomField>