force-app/main/default/objects/LIFO_Processing_Record__c/fields/UNIT_COST__c.field-meta.xml
<CustomField>
    <fullName>UNIT_COST__c</fullName>
    <description>Unit cost fromt he RS Inventory Cost Transaction Record</description>
    <label>UNIT COST</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>