force-app/main/default/objects/LIFO_Processing_Record__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Inventory_Item_Master__c</columns>
    <columns>RCPT_NUMBER__c</columns>
    <columns>TXN_QTY__c</columns>
    <columns>TXN_TYPE__c</columns>
    <columns>TXN_SUB_TYPE__c</columns>
    <columns>TOTAL_COST__c</columns>
    <columns>UNIT_COST__c</columns>
    <columns>FIFO_Layer_Reference__c</columns>
    <columns>Rootstock_Cost_Transaction__c</columns>
    <columns>Record_Processed__c</columns>
    <columns>Ready_to_Process__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>